--- a/src/main/reactfront/src/css/Box1.css
+++ b/src/main/reactfront/src/css/Box1.css
@@ -1,16 +1,31 @@
+#root {
+    padding-bottom: 80%;  /* 가로 세로 비율을 1:1로 유지 */
+    position: relative;  /* 하위 요소의 위치를 상대적으로 설정 */
+    margin-left: auto;
+    margin-right: auto;
+    font-size: 80%;
+
+}
+img{
+    width: 80%;
+}
+
 li{
     cursor: pointer;
 }
 .memberInfo{
-    padding: 50px;
+    padding: 25px;
 }
 .menu{
-    padding-left: 50px;
+    padding-left: 25px;
+}
+.menuLine ul{
+    padding-left: 25px;
 }
 .menuLine li{
     border-bottom: 1px solid #dbdbdb;
     box-shadow: 0 0px 0px -2px rgba(0, 0, 0, 0.1); /* 박스 그림자를 추가하여 입체감을 줍니다. */
-    padding: 10px;
+    padding: 10px 0;
 }
 #searchArea {
     padding: 10px 0;
@@ -22,6 +37,7 @@ li{
 
 #searchArea input[type="text"],#writeArea input {
     width: 45%;
+    height: 20%;
     padding: 12px 20px;
     margin-right: 10px;
     display: inline-block;
@@ -38,7 +54,6 @@ li{
     text-align: center;
     text-decoration: none;
     display: inline-block;
-    font-size: 16px;
     margin: 4px 2px;
     transition-duration: 0.4s;  /* 버튼이 눌렸을 때 애니메이션 효과를 위한 설정 */
 }
@@ -49,7 +64,6 @@ li{
 }
 #writeArea input[type="text"]{
     margin: 5px;
-    width: 90%;
 }
 #writeArea textarea{
     margin: 5px;
