--- a/src/main/reactfront/src/css/Box3.css
+++ b/src/main/reactfront/src/css/Box3.css
@@ -1,7 +1,8 @@
+
 .title {
     margin-bottom: 20px; /* 타이틀과 다른 요소들 사이에 공간을 만듭니다. */
-    font-size: 24px; /* 타이틀의 글자 크기를 크게 설정합니다. */
-    /*font-weight: bold; !* 타이틀의 글자를 굵게 설정합니다. *!*/
+    font-size: 120%;
+    font-weight: bold; /* 타이틀의 글자를 굵게 설정합니다. */
 }
 .contentContainer{
     display: flex;
@@ -17,13 +18,9 @@
 
 
 .tier-image img {
-    width: 100px; /* 이미지의 크기를 조절합니다. */
     height: auto; /* 이미지의 높이를 자동으로 조절하여 원래 비율을 유지합니다. */
-    border-radius: 50%; /* 이미지를 원형으로 만듭니다. */
-    margin-right: 20px; /* 이미지와 다음 요소 사이에 여백을 추가합니다. */
 }
 .summoner{
-    margin-left: 20px;
     margin-right: 10px; /* 이미지와 다음 요소 사이에 여백을 추가합니다. */
 
 }
@@ -34,6 +31,7 @@
     margin-left: 20px;
 }
 .winlose{
+    margin-top: 10px;
     display: flex;
 }
 
@@ -42,7 +40,6 @@
     border: none;
     color: white;
     padding: 10px 10px;
-    font-size: 16px;
     cursor: pointer;
     margin: 10px 10px 10px 30px;
     display: flex;
@@ -60,6 +57,7 @@
 }
 .donut-chart{
     display: flex;
+
 }
 
 li.champion{
@@ -113,7 +111,8 @@ li.champion{
 .false{
     background-color: #e9e9e9;
 }
-
+.kda{
+}
 .kda #true{
     color:#4aa8d8;
 }
@@ -145,7 +144,6 @@ li.champion{
     justify-content: center;
     display: flex;
     padding-left: 20px;
-    font-size: 18px;
 }
 #deaths{
     color:red;
