--- a/src/main/reactfront/src/css/Box3.css
+++ b/src/main/reactfront/src/css/Box3.css
@@ -85,48 +85,48 @@ li.champion{
     width: 75px;
 }
 /**/
-.recentMatchList #matchList{
+.recentMatchList .matchList{
     display: flex;
     flex-direction: column;
     margin: 20px;
-
+    width: 90%;
     border-radius: 10px;
-    padding: 10px;
-
+}
+.matchList .gameType,.summonerList,.itemList{
+    padding: 5px;
 }
 
 .summonerList{
     display: flex;
 }
 .championImg{
-    width: 75px;
-    height: 75px;
+    width: 60px;
+    height: 60px;
 }
 .matchInfo{
     display: flex;
 }
-.true{
+li.true>*{
     background-color:#ecf7fc;
 }
-.false{
+li.false>*{
     background-color: #e9e9e9;
 }
-.kda{
-}
-.kda #true{
+.kda .true,.true .gameType{
     color:#4aa8d8;
 }
-.kda #false{
-    color:#666666
+.kda .false,.false .gameType{
+    color:#666666;
 }
+
 .runeImg img{
     margin-left: 5px;
 }
 #mainRune{
-    width: 35px;
+    width: 25px;
 }
 #subRune{
-    width: 25px;
+    width: 19px;
     height: 30px;
 }
 
@@ -135,7 +135,7 @@ li.champion{
     display: flex;
 }
 .spellImg img{
-    width: 35px;
+    width: 25px;
     margin-left: 5px;
 }
 
@@ -150,7 +150,7 @@ li.champion{
 }
 
 .itemList img{
-    width: 35px;
+    width: 25px;
 }
 .itemList ul{
     display: flex;  /* 또는 display: inline-block; */
