--- a/src/main/reactfront/src/css/Box3.css
+++ b/src/main/reactfront/src/css/Box3.css
@@ -106,10 +106,11 @@ li.champion{
 .matchInfo{
     display: flex;
 }
-li.true>*{
+li.true{
     background-color:#ecf7fc;
+
 }
-li.false>*{
+li.false{
     background-color: #e9e9e9;
 }
 .kda .true,.true .gameType{
@@ -127,7 +128,7 @@ li.false>*{
 }
 #subRune{
     width: 19px;
-    height: 30px;
+    height: 21px;
 }
 
 
