--- a/src/main/reactfront/src/css/Box3.css
+++ b/src/main/reactfront/src/css/Box3.css
@@ -64,26 +64,31 @@ li.champion{
     display: flex;
 }
 
-.mostChampionList{
+.mostChampionList ul {
+    list-style: none;
+    padding-left: 30px;
 }
 
-.mostChampionList .championInfo {
-    margin: 5px;
-    margin-top: 10px;
-}
-
-
-.mostChampionList .champion{
-    border-radius: 10px; /* 테두리 모서리를 둥글게 하여 부드러운 느낌을 줍니다. */
-    box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1); /* 박스 그림자를 추가하여 입체감을 줍니다. */
-    border: 1px  #000000; /* 테두리 색상은 검은색, 두께는 1px */
-    padding: 10px; /* 테두리와 박스 내용 사이의 여백 */
-    margin: 10px; /* 박스와 박스 사이의 여백 */
+.mostChampionList li {
+    display: flex;
+    align-items: center; /* 이미지와 텍스트 수직 중앙 정렬 */
+    margin: 10px 0; /* 각 아이템 사이의 간격 */
+    padding: 10px; /* 패딩 추가 */
+    border-radius: 10px;
+    box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1);
 }
 
 .mostChampionList img {
     width: 75px;
+    margin-right: 10px; /* 이미지와 텍스트 사이의 여백 */
 }
+
+.championInfo {
+    display: flex;
+    flex-direction: column; /* 수직으로 텍스트 배치 */
+    line-height: 1.5; /* 텍스트 간격 조절 */
+}
+
 /**/
 .recentMatchList .matchList{
     display: flex;
