--- a/src/main/reactfront/src/css/Main.css
+++ b/src/main/reactfront/src/css/Main.css
@@ -13,7 +13,7 @@ li {
     padding: 0;
 }
 .box1 {
-    flex: 3.5;
+    flex: 2.0;
     border-right: 1px solid #dbdbdb;
     box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1);
     border-radius: 7px;
@@ -196,13 +196,14 @@ li {
 }
 
 .box2 {
+    margin-left: 110px;
     flex: 3;
 }
 
 .box3 {
     margin-right: 10px;
     margin-top: 50px;
-    flex: 3;
+    flex: 2.0;
 }
 
 ul {
