안내문 추가

--- a/frontend/src/css/Join.css
+++ b/frontend/src/css/Join.css
@@ -18,9 +18,11 @@ form {
 }
 
 form label {
+    
     margin-bottom: .5em;
     color: #333;
     font-weight: bold;
+    width: 100%;
 }
 
 form input {
